# pymatnext

./: .gitignore  LICENSE  Makefile  README.md  README_analysis.md  README_input_parameters.md  README_usage.md  pyproject.toml  setup.cfg
.github/workflows/: pytests.yml
examples/EAM_LAMMPS/: ase_test.inp  ase_test_sGC.inp  params.toml  params_sGC.toml
examples/EMT_ASE/: EMT.py  ase_sGC_test.inp  ase_test.inp  params.toml  params_sGC.toml
examples/LJ_ASE/: LJ.py  params.toml
examples/LJ_LAMMPS/: params.toml  params_ASE_calc.toml
examples/test/: params.toml  test_emt_al_cu.py
lammps_patches/: Makefile  patch_cmake.py
pymatnext/: ns.py  ns_params.py  ns_utils.py  params.py  sample_params.py  sample_utils.py
pymatnext/analysis/: utils.py
pymatnext/analysis/tools/: __init__.py  xrd_pbc.py
pymatnext/cli/: ns_analyse.py  ns_analyse_traj.py  sample.py
pymatnext/extras/: lammps.patch
pymatnext/loop_exit/: Z_of_T.py  __init__.py  loop_exit_params.py
pymatnext/ns_configs/ase_atoms/: __init__.py  ase_atoms_params.py  atoms_contig_store.py  walks_ase_calc.py  walks_lammps.py
scripts/: make_input_parameters_md
tests/: .coveragerc  test_ase_atoms.py  test_atoms_contig_store.py  test_params.py  test_sample.py
tests/assets/do_EAM_LAMMPS/: AlCu_Zhou04.eam.alloy
tests/assets/do_Morse_ASE/: Morse.py  params.toml
tests/assets/do_pressure/: Morse.py  params_ASE.toml  params_LAMMPS.toml
tests/assets/do_sGC/: EAM_matscipy.py  params_LAMMPS.toml  params_matscipy.toml
tests/assets/example_EAM_LAMMPS/: params_sGC.toml
tests/assets/example_LJ_ASE/: params.toml
(+8 files in other folders)
