[metadata]

name = pymatnext
version = 0.1.0
description = "Nested Sampling for Materials Science"

[options]

packages = find:

install_requires = 
    numpy
    ase
    tqdm

include_package_data = True

[options.package_data]
    pymatnext = extras/lammps.patch

[options.entry_points]
console_scripts =
    pymatnext = pymatnext.cli.sample:main
    ns_analyse = pymatnext.cli.ns_analyse:main
    ns_analyse_traj = pymatnext.cli.ns_analyse_traj:main
